--- a/style.css
+++ b/style.css
@@ -7080,9 +7080,15 @@ h1 {
   font-family: "amaticbold", "Times New Roman", Times, serif;
 }
 .navbar-brand {
-  font-size: 24px;
+  font-size: 28px;
   font-family: "amaticbold", "Times New Roman", Times, serif;
-  padding-top: 40px;
+  padding-top: 20px;
+}
+@media (min-width: 28em) {
+  .navbar-brand {
+    font-size: 36px;
+    padding-top: 40px;
+  }
 }
 @media (min-width: 48em) {
   .navbar-brand {
@@ -7117,6 +7123,16 @@ h1 {
 }
 .navbar-static-top {
   clear: both;
+}
+.navbar-toggle {
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+@media (min-width: 28em) {
+  .navbar-toggle {
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
 }
 .small-label {
   float: left;
@@ -7225,14 +7241,26 @@ h1 {
   width: 49%;
 }
 .mobile-toggle {
-  padding: 6.25px 14.5px;
+  padding: 4.5px 14px;
 }
 .logo-mobile {
   padding-top: 5px;
 }
 .logo-mobile img {
-  width: 75px;
+  padding: 5px 0px;
+  width: 45px;
   float: left;
+}
+@media (min-width: 22em) {
+  .logo-mobile img {
+    width: 65px;
+  }
+}
+@media (min-width: 28em) {
+  .logo-mobile img {
+    width: 75px;
+    padding-bottom: 10px;
+  }
 }
 .logo-desktop img {
   width: 12%;
@@ -7440,4 +7468,80 @@ footer a {
   body {
     font-size: 1.8em;
   }
+}
+/*.mobile-caret-container {
+    width:45%;
+    float:right;
+    
+        &:hover {
+        cursor: pointer; 
+        cursor: hand; 
+    }
+    
+    &:after{
+        content:"";
+        clear:both;
+    }
+        
+}*/
+.caret {
+  margin-top: 18px;
+  border-top: 6px dashed;
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent;
+}
+.caret:hover {
+  cursor: pointer;
+  cursor: hand;
+}
+.mobile-dropdown-caret {
+  display: block;
+  font-size: 20px;
+  position: absolute;
+  right: 4%;
+  top: 0;
+  z-index: 99999999;
+}
+@media screen and (min-width: 768px) {
+  .mobile-dropdown-caret {
+    display: none;
+  }
+}
+.navbar-collapse .menu-item a {
+  width: 90%;
+  border: 1px solid #86B231;
+}
+@media screen and (min-width: 768px) {
+  .navbar-collapse .menu-item a {
+    width: auto;
+    border: none;
+  }
+}
+.dropdown-toggle > .caret {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .dropdown-toggle > .caret {
+    display: inline-block;
+  }
+}
+.caret-border {
+  width: 10%;
+  border: 1px solid #86B231;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  top: 0;
+}
+.caret-border:hover {
+  cursor: pointer;
+  cursor: hand;
+}
+@media screen and (min-width: 768px) {
+  .caret-border {
+    display: none;
+  }
+}
+.dropdown-menu {
+  padding: 0px;
 }
